--- a/.github/workflows/dokka.yml
+++ b/.github/workflows/dokka.yml
@@ -35,4 +35,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build/dokka/html
+          publish_dir: dokka/html
